--- a/roadmap.html
+++ b/roadmap.html
@@ -11,9 +11,9 @@
     <title>Theme Template for BC Developers' Exchange</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
-    <link href="../bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- BC Developers' Exchange Helpers theme -->
     <link href="css/bcdevexchange-theme-helpers.css" rel="stylesheet">
@@ -29,6 +29,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/behaviour.js"></script>
 
   </head>
   <body>
@@ -45,7 +48,7 @@
 
         <div class="bcde-l-header__content col-md-11 clearfix">
 
-              <a class="bcde-header__navigation-toggle-mobile" href="">
+              <a class="bcde-header__navigation-toggle-mobile" data-toggle="collapse" href="#js-bcde-header__navigation-container" aria-expanded="false">
                 <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
               </a>
 
@@ -55,7 +58,7 @@
 
               <a class="bcde-header__logo__text">BC Developers' Exchange</a>
 
-              <nav class="bcde-header__navigation-container">
+              <nav class="collapse bcde-header__navigation-container" id="js-bcde-header__navigation-container">
                 <ul class="nav nav-pills bcde-header__navigation" role="tablist">
                   <li><a href="" title="About">About</a></li>
                   <li><a href="" title="Open Opportunities">Open Opportunities</a></li>
@@ -69,7 +72,9 @@
 
       </header>
 
-    <main>
+    </div>
+
+     <main class="container bcde-l-contentpage__container">
 
       <section class="row">
 
@@ -81,7 +86,31 @@
           <h1>Roadmap</h1>
 
           <div class="row">
-            <div class="col-sm-9">
+
+            <div class="col-md-4 col-md-push-8">
+
+              <div class="bcde-l-contentpage__side-menu">
+
+                <h5>Contents</h5>
+                <ul>
+                  <li>Introduction</li>
+                  <li>Where Did the Roadmap Come From?</li>
+                    How to Use This Roadmap</li>
+                  <li>How to Contribute</li>
+                </ul>
+
+                <h5>The Epics</h5>
+                <ul>
+                  <li>Kick Start</li>
+                  <li>Sprint With Us</li>
+                  <li>Code for Government Ready Products </li>
+                  <li>Code With Us - Paid</li>
+                </ul>
+
+              </div>
+            </div>
+
+            <div class="col-md-8 col-md-pull-4 bcde-l-contentpage__content">
 
               <p>We are sharing our service roadmap as part of a concerted e ort to engage with B.C.’s tech community,
                 and to enable them to help shape, re ne and contribute to the development of the BCDevExchange.
@@ -100,7 +129,7 @@
                 how to evolve the BCDevExchange.</p>
 
 
-              <p>Where did the roadmap come from?</p>
+              <h2>Where did the roadmap come from?</h2>
 
               <p>The BCDevExchange team is treating this initiative as a type of "lean start-up" e ort,
                 with a customer-centered service design and an Agile methodology. We build, test and
@@ -117,7 +146,7 @@
                 increasing code quality.</p>
 
 
-              <p>  HOW TO USE THIS ROADMAP</p>
+              <h2>How to use this Roadmap</h2>
 
               <p>In broad terms, this roadmap describes the potential services of the BCDevExchange.
               These are the Epics – our big pieces of work. Each Epic has a high-level user story and
@@ -135,23 +164,6 @@
             </div>
 
 
-            <div class="col-sm-3">
-              <h5>Contents</h5>
-              <ul>
-                <li>Introduction</li>
-                <li>Where Did the Roadmap Come From?</li>
-                  How to Use This Roadmap</li>
-                <li>How to Contribute</li>
-              </ul>
-
-              <h5>The Epics</h5>
-              <ul>
-                <li>Kick Start</li>
-                <li>Sprint With Us</li>
-                <li>Code for Government Ready Products </li>
-                <li>Code With Us - Paid</li>
-              </ul>
-            </div>
 
           </div>
         </div>
@@ -160,15 +172,15 @@
 
       <section class="row">
 
-        <div class="col-md-1">
-          <h4><span class="label label-warning">Epic 1</span></h4>
+        <div class="col-md-1 bcde-l-contentpage-side">
+          <span class="label label-section">Epic 1</span>
         </div>
 
-        <div class="col-md-11">
+        <div class="col-md-11 bcde-l-contentpage__content">
 
-          <h2>Kick Start Your First Release</h2>
+          <h3>Kick Start Your First Release</h3>
 
-          <p>What is Kickstart</p>
+          <h4>What is Kickstart</h4>
           <p>We encourage you to explore, examine and share your ideas as we are always looking for input that will help us provide greatest value to our users.</p>
 
           <p>These are the ways you can contribute to the roadmap:</p>
@@ -182,42 +194,70 @@
 
       </section>
 
+
+      <section class="row">
+
+        <div class="col-md-1 bcde-l-contentpage-side">
+          <span class="label label-section">Epic 2</span>
+        </div>
+
+        <div class="col-md-11 bcde-l-contentpage__content">
+
+          <h3>Sprint With Us</h3>
+
+          <h4>What is Kickstart</h4>
+          <p>We encourage you to explore, examine and share your ideas as we are always looking for input that will help us provide greatest value to our users.</p>
+
+          <p>These are the ways you can contribute to the roadmap:</p>
+
+          <p>The code and content for the roadmap is all in this GitHub repo. Send us a pull request with your suggested edits.
+            If you have a question about the roadmap, open an issue in the repo and we will respond.
+            Each of the smaller user stories is an issue in GitHub. Comment on the issue to give your feedback.
+            To see what we're working on please visit our Kanboard.</p>
+
+        </div>
+
+      </section>
+
+
     </main>
 
+    <div class="container">
 
-    <footer class="bcde-footer row">
+      <footer class="bcde-footer row">
 
-      <div class="bcde-footer__logo-container col-md-1">
-        <a href="" class="bcde-footer__logo">
-          <img src="assets/logo-image.png" alt="BC Developers' Exchange Logo"/>
-        </a>
-      </div>
-
-
-      <div class="col-md-9">
-        <div class="bcde-footer__navigation-container">
-          <ul class="nav nav-pills bcde-footer__navigation">
-            <li><a href="" title="About">About</a></li>
-            <li><a href="" title="Open Opportunities">Open Opportunities</a</li>
-            <li><a href="" title="Open APIs">Open APIs</a</li>
-            <li><a href="" title="Kick Start Program">Kick Start Program</a</li>
-            <li><a href="" title="Roadmap">Roadmap</a></li>
-          </ul>
-
-          <ul class="nav nav-pills bcde-footer__navigation">
-            <li><a href="" title="Blog">Blog</a></li>
-            <li><a href="" title="Resources">Resources</a></li>
-            <li><a href="" title="Legal">Legal</a></li>
-            <li><a href="" title="Contact">Contact</a></li>
-          </ul>
+        <div class="bcde-footer__logo-container col-md-1">
+          <a href="" class="bcde-footer__logo">
+            <img src="assets/logo-image.png" alt="BC Developers' Exchange Logo"/>
+          </a>
         </div>
-      </div>
 
-      <div class="bcde-footer__logo-container col-md-2">
-        <a class="bcde-sponsor-logo" href="" title="Supported by the Government of British Columbia"><img src="assets/bc-sponsor.jpg" alt="Supported by the Government of British Columbia Logo"></a>
-      </div>
-    </footer>
 
-  </div>
+        <div class="col-md-9">
+          <div class="bcde-footer__navigation-container">
+            <ul class="nav nav-pills bcde-footer__navigation">
+              <li><a href="" title="About">About</a></li>
+              <li><a href="" title="Open Opportunities">Open Opportunities</a</li>
+              <li><a href="" title="Open APIs">Open APIs</a</li>
+              <li><a href="" title="Kick Start Program">Kick Start Program</a</li>
+              <li><a href="" title="Roadmap">Roadmap</a></li>
+            </ul>
+
+            <ul class="nav nav-pills bcde-footer__navigation">
+              <li><a href="" title="Blog">Blog</a></li>
+              <li><a href="" title="Resources">Resources</a></li>
+              <li><a href="" title="Legal">Legal</a></li>
+              <li><a href="" title="Contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="bcde-footer__logo-container col-md-2">
+          <a class="bcde-sponsor-logo" href="" title="Supported by the Government of British Columbia"><img src="assets/bc-sponsor.jpg" alt="Supported by the Government of British Columbia Logo"></a>
+        </div>
+      </footer>
+
+    </div>
+
 <body>
 </html>
